Add switch toggle
